--- a/source/Generic/GamePassCatalogBrowser/GamePassCatalogBrowser.csproj
+++ b/source/Generic/GamePassCatalogBrowser/GamePassCatalogBrowser.csproj
@@ -214,10 +214,10 @@
     <Compile Include="ViewModels\SteamSearchBrowserViewModel.cs" />
     <Compile Include="Services\GamePassCatalogBrowserService.cs" />
     <Compile Include="Services\SteamSearchService.cs" />
-    <Compile Include="SteamSearchBrowser.cs" />
-    <Compile Include="SteamSearchBrowserSettings.cs" />
-    <Compile Include="SteamSearchBrowserSettingsView.xaml.cs">
-      <DependentUpon>SteamSearchBrowserSettingsView.xaml</DependentUpon>
+    <Compile Include="GamePassCatalogBrowser.cs" />
+    <Compile Include="GamePassCatalogBrowserSettings.cs" />
+    <Compile Include="GamePassCatalogBrowserSettingsView.xaml.cs">
+      <DependentUpon>GamePassCatalogBrowserSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XboxLibraryHelper.cs" />
@@ -228,15 +228,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="Resources\XboxLogoFont.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="app.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\CatalogBrowserView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -245,7 +238,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="SteamSearchBrowserSettingsView.xaml">
+    <Page Include="GamePassCatalogBrowserSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -255,12 +248,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Page Include="Localization\en_US.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets" Condition="Exists('..\..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -269,7 +256,4 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets'))" />
   </Target>
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)Localization\*.xaml" "$(TargetDir)\Localization" /Y /I /E</PostBuildEvent>
-  </PropertyGroup>
 </Project>
